fix project dialogbox wrapping issue

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@
 @tailwind utilities;
 
 h1,
-h2 {
+h2,
+h3,
+h4 {
   @apply font-spaceGrotesk;
 }
 
